# pyobs-gui

./: .flake8  .pre-commit-config.yaml  .readthedocs.yml  DEVELOPMENT.md  DEV_IAcquisition.md  DEV_IAutoFocus.md  DEV_IAutoGuiding.md  DEV_NavbarShortcuts.md  DEV_qml_evaluation.md  DEV_telescopewidget_layout.md  README.md  mypy.ini  pyproject.toml  requirements.txt  setup.py
.claude/skills/verify/: SKILL.md
.github/workflows/: pypi.yml  pyrefly.yml  ruff.yml
docs/source/: conf.py  index.rst
pyobs_gui/: __init__.py  _base.py  acquisitionwidget.py  autofocuswidget.py  autoguidingwidget.py  base.py  basewidget.py  camerawidget.py  commandinputwidget.py  compassmovewidget.py  coolingwidget.py  datadisplaywidget.py  eventswidget.py  filterwidget.py  fitsheaderswidget.py  focuswidget.py  genericwidgets.py  gui.py  logmodel.py  mainwindow.py  modewidget.py  modifiedmixin.py  modulegui.py  roofwidget.py  shellwidget.py  spectrographwidget.py  statuswidget.py  telescopewidget.py  temperaturesplotwidget.py  temperatureswidget.py  utils.py  videowidget.py  visplot.py  watchedlabel.py  weatherwidget.py  widgetcamera.py  widgetcommitted.py  widgetcooling.py  widgetdatadisplay.py  widgetevents.py  (+15 more)
pyobs_gui/qt/: acquisitionwidget.ui  acquisitionwidget_ui.py  autofocuswidget.ui  autofocuswidget_ui.py  autoguidingwidget.ui  autoguidingwidget_ui.py  cameraplugin.py  camerawidget.py  camerawidget.ui  camerawidget_ui.py  commandinput.py  compassmoveplugin.py  compassmovewidget.py  compassmovewidget.ui  compassmovewidget_ui.py  compile.sh  coolingwidget.ui  coolingwidget_ui.py  datadisplayplugin.py  datadisplaywidget.py  datadisplaywidget.ui  datadisplaywidget_ui.py  designer.sh  eventswidget.ui  eventswidget_ui.py  filterwidget.ui  filterwidget_ui.py  fitsheaderswidget.ui  fitsheaderswidget_ui.py  focuswidget.ui  focuswidget_ui.py  mainwindow.py  mainwindow.ui  mainwindow_ui.py  modewidget.ui  modewidget_ui.py  resources.qrc  resources_rc.py  roofwidget.ui  roofwidget_ui.py  (+43 more)
pytel_gui/: __init__.py  mainwindow.py  mainwindow.ui  widgetcamera.py  widgetshell.py
pytel_gui/qt/: mainwindow.py  mainwindow.ui  resources.qrc  resources_rc.py  widgetcamera.py  widgetcamera.ui  widgetshell.py  widgetshell.ui
test/: acquisition.yaml  autofocus.yaml  camera.yaml  full.yaml  guiding.yaml  mode.yaml  roof.yaml  spectrograph.yaml  telescope.yaml  telescope_acl.yaml  telescope_acl_denied.yaml  video.yaml
